ci(project): setup hooks and commitlint on project

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "lint": "eslint src/**/*.js --fix",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install",
+    "commit": "commit"
   },
   "author": {
     "name": "Esteban Salazar Zapata - Boamorte88",
@@ -15,16 +17,25 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "17.0.3",
+    "@commitlint/config-conventional": "17.0.3",
+    "@commitlint/prompt-cli": "17.0.3",
     "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-standard": "^7.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.2.4",
     "eslint-plugin-promise": "6.0.0",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
     "nodemon": "2.0.19",
     "prettier": "2.7.1"
   },
   "imports": {
     "#Lib/*": "./src/lib/*"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,md}": "prettier --write"
   }
 }
