feat(project): update dependencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@commitlint/prompt-cli": "17.0.3",
     "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-config-standard": "^7.0.0",
+    "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.2.4",
     "eslint-plugin-promise": "6.0.0",
@@ -35,7 +35,7 @@
     "#Lib/*": "./src/lib/*"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
+    "*.js": "eslint --fix",
     "*.{js,md}": "prettier --write"
   }
 }
