--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src/**/*.js --fix",
     "prettier": "prettier --write .",
     "prepare": "husky install",
-    "commit": "commit"
+    "commit": "commit",
+    "postinstall": "npm run prepare"
   },
   "author": {
     "name": "Esteban Salazar Zapata - Boamorte88",
