--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "Base template for projects developed on the Node.JS Course by LearnThis",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "node --watch src/index.js",
     "start": "node src/index.js",
     "lint": "eslint src/**/*.js --fix",
     "prettier": "prettier --write .",
@@ -18,19 +18,18 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "17.1.2",
-    "@commitlint/config-conventional": "17.1.0",
-    "@commitlint/prompt-cli": "17.1.2",
-    "eslint": "8.26.0",
-    "eslint-config-prettier": "8.5.0",
+    "@commitlint/cli": "17.6.1",
+    "@commitlint/config-conventional": "17.6.1",
+    "@commitlint/prompt-cli": "17.6.1",
+    "eslint": "8.39.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.3.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "15.7.0",
     "eslint-plugin-promise": "6.1.1",
-    "husky": "8.0.1",
-    "lint-staged": "13.0.3",
-    "nodemon": "2.0.20",
-    "prettier": "2.7.1"
+    "husky": "8.0.3",
+    "lint-staged": "13.2.2",
+    "prettier": "2.8.8"
   },
   "imports": {
     "#Lib/*": "./src/lib/*"
